2007-07-01  Pamela Greene  <pamg.bugs@gmail.com>

Reviewed by Darin.

        Fix for <http://bugs.webkit.org/show_bug.cgi?id=14320>
        Bug 14320: <canvas> gradient stops at identical offsets are applied in the wrong order
        <rdar://problem/5290084>

        Use std::stable_sort() instead of qsort() to sort gradient stops.
        Adjust the comparison function accordingly.

        * html/CanvasGradient.cpp:
        (WebCore::compareStops):
        (WebCore::CanvasGradient::findStop):

2007-07-01  Pamela Greene  <pamg.bugs@gmail.com>

        Reviewed by Darin.

        Tests for <http://bugs.webkit.org/show_bug.cgi?id=14320>
        Bug 14320: <canvas> gradient stops at identical offsets are applied in the wrong order
        <rdar://problem/5290084>

        Add tests for various combinations of stops, including multiple stops at
        the same offsets, sorted and unsorted.  Update results accordingly.

        * fast/canvas/fillrect_gradient-expected.checksum:
        * fast/canvas/fillrect_gradient-expected.png:
        * fast/canvas/fillrect_gradient-expected.txt:
        * fast/canvas/fillrect_gradient.html:


Canonical link: https://commits.webkit.org/18672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23912 268f45cc-cd09-0410-ab3c-d52691b4dbfc